don't link against static libSDLmain.a library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ ELSE( DEFINED CMAKE_INSTALL_PREFIX )
   SET( INSTALL_PREFIX /usr/local )
 ENDIF( DEFINED CMAKE_INSTALL_PREFIX )
 
+SET(SDL_BUILDING_LIBRARY ON)
 FIND_PACKAGE(SDL REQUIRED)
 IF ( NOT SDL_FOUND)
   MESSAGE( FATAL_ERROR " SDL-devel not found" )
