drop compiler flags that's no longer relevant with c++14

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ ELSE ( DEFINED SHARE_INSTALL_PREFIX )
   SET( DOONLUNACY_GAME_DIR "." )
 ENDIF( DEFINED SHARE_INSTALL_PREFIX )
  
-SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14 -Wall -pedantic -O0 -Wno-long-long -Wno-variadic-macros -g -DGAME_DIR='\"${DOONLUNACY_GAME_DIR}\"' -DVERSION='\"${VERSION}\"'" )
+SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14 -Wall -pedantic -O0 -g -DGAME_DIR='\"${DOONLUNACY_GAME_DIR}\"' -DVERSION='\"${VERSION}\"'" )
 
 IF( DEFINED CMAKE_INSTALL_PREFIX )
   SET( INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX} )
